# si-api

./: README.md  pyproject.toml
src/: database.py
src/evolutions/: 1-downs.sql  1.sql
src/si_api/: __init__.py  commands.py  config.py  manifest.json
src/si_api/controllers/: auth.py  ctrl_models.py  decorators.py  prediction.py  user.py
src/si_api/prediction/: prediction_engine.py
src/si_api/repositories/: user.py
src/si_api/services/: user.py
src/si_api/static/: qqq.html
